<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_menu_kaiyan"
                android:icon="@drawable/ic_drawer_zhihu"
                android:checkable="true"
                android:checked="true"
                android:title="@string/drawer_menu_kaiyan"/>
            <item
                android:id="@+id/drawer_menu_zhihu"
                android:icon="@drawable/ic_drawer_zhihu"
                android:checkable="true"
                android:title="@string/drawer_menu_zhihu"/>
            <item
                android:id="@+id/drawer_menu_wechat"
                android:icon="@drawable/ic_drawer_wechat"
                android:checkable="true"
                android:title="@string/drawer_menu_wechat"/>
            <item
                android:id="@+id/drawer_menu_gank"
                android:icon="@drawable/ic_drawer_gank"
                android:checkable="true"
                android:title="@string/drawer_menu_gank"/>
            <item
                android:id="@+id/drawer_menu_vtex"
                android:icon="@drawable/ic_drawer_vtex"
                android:checkable="true"
                android:title="@string/drawer_menu_vtex"/>
        </menu>
    </item>

    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_menu_like"
                android:icon="@drawable/ic_drawer_like"
                android:checkable="true"
                android:title="@string/drawer_menu_collection"/>
            <item
                android:id="@+id/drawer_menu_setting"
                android:checked="false"
                android:icon="@drawable/ic_drawer_setting"
                android:checkable="true"
                android:title="@string/drawer_menu_setting"/>
            <item
                android:id="@+id/drawer_menu_about"
                android:icon="@drawable/ic_drawer_about"
                android:checkable="true"
                android:title="@string/drawer_menu_about"/>
        </menu>
    </item>

</menu>
